--- a/task1_2.ipynb
+++ b/task1_2.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "Environment: Python 3 and Jupyter notebook\n",
     "\n",
-    "Libraries used: please include the main libraries you used in your assignment, e.g.,:\n",
+    "Libraries used:\n",
     "* pandas\n",
     "* re\n",
     "* numpy\n",
