--- a/task3.ipynb
+++ b/task3.ipynb
@@ -15,12 +15,9 @@
     "\n",
     "Environment: Python 3 and Jupyter notebook\n",
     "\n",
-    "Libraries used: please include the main libraries you used in your assignment, e.g.,:\n",
+    "Libraries used:\n",
     "* pandas\n",
-    "* re\n",
     "* numpy\n",
-    "* seaborn\n",
-    "* matplotlib\n",
     "\n",
     "| **COLUMN**   | **DESCRIPTION**                                               |\n",
     "|--------------|---------------------------------------------------------------|\n",
